kubernetes/apps/base/tools/it-tools/deployment.yaml
# IT-Tools - Online Developer Toolbox
#
# Collection of useful tools for developers: encoders, converters,
# generators, formatters, and more.
# https://github.com/CorentinTh/it-tools
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: tools
  labels:
    app.kubernetes.io/name: it-tools
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:v2024.10.22-7ca5933 # {"$imagepolicy": "flux-system:it-tools"}
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
