kubernetes/apps/base/tools/it-tools/ingress.yaml
# IT-Tools Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  namespace: tools
  labels:
    app.kubernetes.io/name: it-tools
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - tools.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: tools.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 80
